kubernetes/default/konflate/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: konflate
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: http
  hostnames:
    - konflate.whoverse.nexus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: konflate
          port: 8080
